# animego-parser

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
animego_parser/: __main__.py  profile.py
src/animego_parser/: __init__.py  kodik.py  profile.py
src/animego_parser/video/: __init__.py  adapters.py  kodik.py
